# timelesschesses

./: .gitignore  CNAME  Makefile  README.md  launcher.py  output.avi  pyproject.toml  requirements.txt  w.py
.github/workflows/: nuitka.yml
pgns/: 1.pgn  2.pgn  3.pgn
src/: __main__.py  cli.py  game.py  recorder.py
src/chess/: __init__.py  pgn.py
