[tool.poetry]
name = "timelesschesses"
version = "0.1.0"
description = ""
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chess = "^1.9.4"
pygame = "^2.1.2"
vidmaker = "^2.3.0"
opencv-contrib-python = "^4.7.0.68"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
